--- a/index.html
+++ b/index.html
@@ -7,50 +7,50 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
-            <h1>Users</h1>
+        <div class="wrapper__header header">
+            <h1 class="header__title">Users</h1>
         </div>
-        <div class="user">
+        <div class="wrapper__user user">
             <div class="user__data">
-                <div class="user__data-name" id="name">Name: </div>
-                <div class="user__data-email" id="email">Email: </div>
+                <div class="user__data name" id="name">Name: </div>
+                <div class="user__data email" id="email">Email: </div>
             </div>
             <div class="user__logout">
-                <button id="logout">Log out</button>
+                <button class="user__logout logout" id="logout">Log out</button>
             </div>
         </div>
-        <div class="users">
+        <div class="wrapper__users users">
             <div class="users__buttons">
-                <div class="users__buttons-users">
-                    <button id="users_btn">Users</button>
+                <div class="users__buttons button-users">
+                    <button class="button-users__btn" id="users_btn">Users</button>
                 </div>
-                <div class="users__buttons-chat">
-                    <button id="chat_btn">Chat</button>
+                <div class="users__buttons button-chat">
+                    <button class="button-chat__btn" id="chat_btn">Chat</button>
                 </div>
             </div>
             <div class="users__table">
-                <table id="table">
-                    <tr class="users__table-header">
+                <table class="users__table table" id="table">
+                    <tr class="table__header">
                         <th>Name</th>
                         <th>Email</th>
                     </tr>
-                    <tr class="users__table-body">
+                    <tr class="table__body">
                         <td>Alex</td>
                         <td>alex245@gmail.com</td>
                     </tr>
-                    <tr class="users__table-body">
+                    <tr class="table__body">
                         <td>Stefan</td>
                         <td>stefanx348@gmail.com</td>
                     </tr>
-                    <tr class="users__table-body">
+                    <tr class="table__body">
                         <td>Zafar</td>
                         <td>zafar295@gmail.com</td>
                     </tr>
-                    <tr class="users__table-body">
+                    <tr class="table__body">
                         <td>Roman</td>
                         <td>roman444@gmail.com</td>
                     </tr>
-                    <tr class="users__table-body">
+                    <tr class="table__body">
                         <td>Lesha</td>
                         <td>lesha333@gmail.com</td>
                     </tr>
