--- a/public/users.html
+++ b/public/users.html
@@ -51,7 +51,7 @@
 <!--            <div class="users__chat chat" id="chat">-->
 <!--                <div class="chat__title">Chat</div>-->
 <!--                <div class="chat__body">-->
-<!--                    <div class="chat__content" id="chat__content>-->
+<!--                    <div class="chat__content" id="chatСontent>-->
 <!--                        <div class="chat__message">Hello</div>-->
 <!--                    </div>-->
 <!--                    <div class="chat__footer">-->
