--- a/public/users.html
+++ b/public/users.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Users</title>
     <link rel="stylesheet" type="text/css" href="users/styles.css">
 </head>
 <body>
@@ -27,40 +27,9 @@
             <div class="users__buttons button-chat">
                 <button class="button-chat__btn" id="chatBtn">Chat</button>
             </div>
-            <div class="users__buttons users-chat" id="usersChat">
-                <!--                Users online:-->
-                <!--                <div class="users-chat__users">-->
-                <!--                    <li class="users-chat">Misha</li>-->
-                <!--                </div>-->
-            </div>
+            <div class="users__buttons users-chat" id="usersChat"></div>
         </div>
-        <div class="users__change" id="changeTable">
-            <!--                <div class="users__table" id="usersTable">-->
-            <!--                    <table class="users__table table" id="table">-->
-            <!--                        <tr class="table__header">-->
-            <!--                            <th>Name</th>-->
-            <!--                            <th>Email</th>-->
-            <!--                        </tr>-->
-            <!--                        <tr class="table__body">-->
-            <!--                            <td>Alex</td>-->
-            <!--                            <td>alex245@gmail.com</td>-->
-            <!--                        </tr>-->
-            <!--                    </table>-->
-            <!--                </div>-->
-
-<!--            <div class="users__chat chat" id="chat">-->
-<!--                <div class="chat__title">Chat</div>-->
-<!--                <div class="chat__body">-->
-<!--                    <div class="chat__content" id="chatСontent>-->
-<!--                        <div class="chat__message">Hello</div>-->
-<!--                    </div>-->
-<!--                    <div class="chat__footer">-->
-<!--                        <input class="chat__input" id="message" type="text">-->
-<!--                        <button class="chat__button" id="sendBtn">Send</button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-        </div>
+        <div class="users__change" id="changeTable"></div>
     </div>
 </div>
 </div>
