--- a/public/Index.html
+++ b/public/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>LogIn</title>
 <link rel="stylesheet" href="login_signin/style.css">
-<!--<link rel="import" href="login_signin/header.html">-->
 <body>
 
 <div class="container" id="container">
@@ -10,33 +10,6 @@
         <button class="button__log-in button" onclick="location.href='index.html'">Log In</button>
         <button class="button__sign-in button" onclick="location.href='signIn.html'">Sign In</button>
     </div>
-<!--    <form id="signIn" class="form__sing-in" >-->
-<!--        <div class="form__sing-in sign-in">-->
-<!--            <div class="sign-in__Name">-->
-<!--                <label for="name">name</label>-->
-<!--                <input type="text" id="name" placeholder="Name" required>-->
-<!--            </div>-->
-
-<!--            <div class="sign-in__Email">-->
-<!--                <label for="email">e-mail</label>-->
-<!--                <input type="email" id="email" placeholder="Email" required>-->
-<!--            </div>-->
-
-<!--            <div class="sign-in__password">-->
-<!--                <label for="password">password</label>-->
-<!--                <input type="password" id="password" placeholder="Password" required>-->
-<!--            </div>-->
-
-<!--            <div class="sign-in__confirmPassword">-->
-<!--                <label for="confirm_password">confirm password</label>-->
-<!--                <input type="password" id="confirm_password" placeholder="Confirm Password" required>-->
-<!--            </div>-->
-<!--            <div class="form__buttonSubmit buttonSubmit">-->
-<!--                <button class="buttonSubmit__sign-in" type="submit">Submit</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </form>-->
-
     <form class="container-log-in" id="logIn" onsubmit="return false;">
         <div class="form__log-in log-in">
 
@@ -49,15 +22,12 @@
                 <label for="password_log" class="input-label">password</label>
                 <input type="password" id="password_log" placeholder="Password" required>
             </div>
-
         </div>
-
         <div class="form__buttonSubmit buttonSubmit">
             <button class="buttonSubmit__log-in submit__button" id="submitBtn">Submit</button>
         </div>
         <div class="form__error" id="error"></div>
     </form>
-
 </div>
 <script src="js/store.js"></script>
 <script src="js/index.js"></script>
