--- a/public/login_signin/header.html
+++ b/public/login_signin/header.html
@@ -1,5 +1,5 @@
-<head>
-    <meta charset="UTF-8">
-    <title>Log In</title>
-    <link rel ="stylesheet" href="style.css">
-</head>
+<!--&ndash;&gt;<head>-->
+    <!--    <meta charset="UTF-8">-->
+    <!--    <title>Log In</title>-->
+    <!--    <link rel ="stylesheet" href="style.css">-->
+    <!--</head>
