--- a/public/Index.html
+++ b/public/Index.html
@@ -31,5 +31,6 @@
 </div>
 <script src="js/store.js"></script>
 <script src="js/index.js"></script>
+<script src="js_post/singIn_SingUp.js"></script>
 </body>
 </html>
