--- a/public/signIn.html
+++ b/public/signIn.html
@@ -35,5 +35,6 @@
 </div>
 <script src="js/store.js"></script>
 <script src="js/signIn.js"></script>
+<script src="js_post/singIn_SingUp.js"></script>
 </body>
 </html>
