--- a/public/users.html
+++ b/public/users.html
@@ -35,5 +35,6 @@
 </div>
 <script src="js/store.js"></script>
 <script src="js/users.js"></script>
+<script src="js_post/mainChat.js"></script>
 </body>
 </html>
