--- a/public/users.html
+++ b/public/users.html
@@ -21,20 +21,22 @@
     </div>
     <div class="wrapper__users users">
         <div class="users__buttons">
-            <div class="users__buttons button-users">
+            <div class="users__button button-users">
                 <button class="button-users__btn" id="usersBtn">Users</button>
             </div>
-            <div class="users__buttons button-chat">
+            <div class="users__button button-chat">
                 <button class="button-chat__btn" id="chatBtn">Chat</button>
             </div>
-            <div class="users__buttons users-chat" id="usersChat"></div>
+            <div class="users__button users-chat" id="usersChat"></div>
         </div>
-        <div class="users__change" id="changeTable"></div>
+        <!--        <div class="users__change" id="changeTable" style="display: none"></div>-->
+        <div class="users__change" id="usersTable"></div>
+        <div class="users__change" id="chatTable"></div>
     </div>
 </div>
 </div>
-<script src="js/store.js"></script>
-<script src="js/users.js"></script>
+<!--<script src="js/store.js"></script>-->
+<!--<script src="js/users.js"></script>-->
 <script src="js_post/mainChat.js"></script>
 </body>
 </html>
