--- a/public/Index.html
+++ b/public/Index.html
@@ -29,8 +29,8 @@
         <div class="form__error" id="error"></div>
     </form>
 </div>
-<script src="js/store.js"></script>
-<script src="js/index.js"></script>
+<!--<script src="js/store.js"></script>-->
+<!--<script src="js/index.js"></script>-->
 <script src="js_post/signIn_SignUp.js"></script>
 </body>
 </html>
