--- a/public/signIn.html
+++ b/public/signIn.html
@@ -33,8 +33,8 @@
         </div>
     </form>
 </div>
-<script src="js/store.js"></script>
-<script src="js/signIn.js"></script>
+<!--<script src="js/store.js"></script>-->
+<!--<script src="js/signIn.js"></script>-->
 <script src="js_post/signIn_SignUp.js"></script>
 </body>
 </html>
