--- a/public/users.html
+++ b/public/users.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
-    <link rel="stylesheet" type="text/css" href="users/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles_chat.css">
 </head>
 <body>
 <div class="wrapper">
@@ -30,6 +30,8 @@
             <div class="users__buttons users-chat" id="usersChat"></div>
         </div>
         <div class="users__change" id="changeTable"></div>
+<!--        <div class="users__change" id="usersTable"></div>-->
+<!--        <div class="users__change" id="chatTable"></div>-->
     </div>
 </div>
 </div>
